Prevented PvPCraft brand text from being covered by navigation on small screens (cell phones)

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -9,6 +9,8 @@
 
 .root {
   padding: 10px 5px;
+  position: relative;
+  z-index: 1;
 }
 
 .link {
